[gd_scene load_steps=4 format=2]

[ext_resource path="res://AccountCreator.gd" type="Script" id=1]
[ext_resource path="res://lighttheme.tres" type="Theme" id=2]
[ext_resource path="res://lightstylebox_panel.tres" type="StyleBox" id=3]

[node name="AccountCreator" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -1.0
margin_right = -797.0
margin_bottom = -385.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 41.0
margin_right = 311.0
margin_bottom = 261.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="App_Edit" type="LineEdit" parent="VBoxContainer"]
margin_right = 306.0
margin_bottom = 24.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Email_Edit" type="LineEdit" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 306.0
margin_bottom = 73.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User_Edit" type="LineEdit" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 306.0
margin_bottom = 122.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pass_Edit" type="LineEdit" parent="VBoxContainer"]
margin_top = 147.0
margin_right = 306.0
margin_bottom = 171.0
theme = ExtResource( 2 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc_Edit" type="LineEdit" parent="VBoxContainer"]
margin_top = 196.0
margin_right = 306.0
margin_bottom = 220.0
theme = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 317.0
margin_top = 45.8284
margin_right = 474.0
margin_bottom = 263.828
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_App" type="RichTextLabel" parent="VBoxContainer2"]
margin_right = 157.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Applicaton*"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Email" type="RichTextLabel" parent="VBoxContainer2"]
margin_top = 48.0
margin_right = 157.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Email For Account*"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_User" type="RichTextLabel" parent="VBoxContainer2"]
margin_top = 96.0
margin_right = 157.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Username For Account*"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Acc" type="RichTextLabel" parent="VBoxContainer2"]
margin_top = 145.0
margin_right = 157.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Password For Account*"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Desc" type="RichTextLabel" parent="VBoxContainer2"]
margin_top = 193.0
margin_right = 157.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Description / Details"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Title" type="RichTextLabel" parent="."]
margin_left = 7.0
margin_top = 5.0
margin_right = 475.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "
ACCOUNT ADDER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBoxThing" type="Panel" parent="."]
margin_left = 5.59031
margin_top = 269.976
margin_right = 142.59
margin_bottom = 305.976
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CheckBoxThing"]
margin_left = 5.0
margin_top = 11.0
margin_right = 106.0
margin_bottom = 26.0
tab_size = 6
text = "Hide Passwords"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordCheck" type="CheckBox" parent="CheckBoxThing"]
margin_left = 108.812
margin_top = 6.41812
margin_right = 132.812
margin_bottom = 30.4181
focus_mode = 1
pressed = true
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordCheck2" type="Button" parent="."]
margin_left = 148.594
margin_top = 270.009
margin_right = 285.594
margin_bottom = 306.009
focus_mode = 1
custom_styles/hover = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.0470588, 0.0470588, 0.0470588, 1 )
enabled_focus_mode = 1
text = "Create Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = -0.308334
margin_top = 263.586
margin_right = 480.691
margin_bottom = 267.586
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="CheckBoxThing/PasswordCheck" to="." method="_on_PasswordCheck_toggled"]
[connection signal="pressed" from="PasswordCheck2" to="." method="_on_PasswordCheck2_pressed"]
